--- a/SynthFramework/Base.lproj/MainInterface.storyboard
+++ b/SynthFramework/Base.lproj/MainInterface.storyboard
@@ -17,26 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hrq-Uy-FGv">
+                                <rect key="frame" x="20" y="13" width="395" height="100"/>
+                                <connections>
+                                    <segue destination="Blz-YU-9M9" kind="embed" identifier="envVC" id="Ico-1R-p1n"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QGg-UQ-iB7">
+                                <rect key="frame" x="20" y="211" width="395" height="157"/>
+                                <connections>
+                                    <segue destination="O1O-ev-ww4" kind="embed" identifier="oscVC" id="o5o-RY-oda"/>
+                                </connections>
+                            </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xMn-2C-70D">
-                                <rect key="frame" x="20" y="139" width="395" height="101"/>
+                                <rect key="frame" x="20" y="112" width="395" height="101"/>
                                 <connections>
                                     <segue destination="aWm-7K-TG4" kind="embed" identifier="dcaVC" id="fdF-nt-nMz"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hrq-Uy-FGv">
-                                <rect key="frame" x="20" y="13" width="395" height="128"/>
-                                <connections>
-                                    <segue destination="Blz-YU-9M9" kind="embed" identifier="oscVC" id="Ico-1R-p1n"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QGg-UQ-iB7">
-                                <rect key="frame" x="20" y="238" width="395" height="157"/>
-                                <connections>
-                                    <segue destination="O1O-ev-ww4" kind="embed" identifier="EnvVC" id="o5o-RY-oda"/>
-                                </connections>
-                            </containerView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.58005560579470128" blue="0.27396684659247583" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.964385986328125" green="0.72829474153688878" blue="0.44219499600653833" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -146,7 +146,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.924713134765625" green="0.70407873392187503" blue="0.28131103515625" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="attackSlider" destination="O3i-r6-esy" id="cWN-Jc-MHZ"/>
@@ -208,7 +208,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.99229528840000003" green="0.76262601510000005" blue="0.33249146689999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="panSlider" destination="LK0-Ol-27s" id="ISN-pI-quL"/>
@@ -226,17 +226,17 @@
             <objects>
                 <viewController id="Blz-YU-9M9" customClass="OscillatorViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wly-2V-RUX">
-                        <rect key="frame" x="0.0" y="0.0" width="395" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="395" height="100"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Waveform" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byu-Uc-NIA">
-                                <rect key="frame" x="130" y="76" width="134" height="21"/>
+                                <rect key="frame" x="130" y="70" width="134" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z8P-A9-NaM">
-                                <rect key="frame" x="120" y="20" width="154" height="43"/>
+                                <rect key="frame" x="120" y="14" width="154" height="43"/>
                                 <state key="normal" title="Change Waveform">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -245,7 +245,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="waveformButton" destination="Z8P-A9-NaM" id="hfb-aS-Z3a"/>
