--- a/SynthFramework/Base.lproj/MainInterface.storyboard
+++ b/SynthFramework/Base.lproj/MainInterface.storyboard
@@ -35,6 +35,12 @@
                                     <segue destination="aWm-7K-TG4" kind="embed" identifier="dcaVC" id="fdF-nt-nMz"/>
                                 </connections>
                             </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CXo-UX-Ef4">
+                                <rect key="frame" x="20" y="366" width="395" height="103"/>
+                                <connections>
+                                    <segue destination="WxK-xs-7j9" kind="embed" id="mga-vM-hEm"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="0.964385986328125" green="0.72829474153688878" blue="0.44219499600653833" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -167,6 +173,10 @@
         <scene sceneID="10P-YI-NDe">
             <objects>
                 <viewController id="aWm-7K-TG4" customClass="DCAViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qxs-xT-XQH"/>
+                        <viewControllerLayoutGuide type="bottom" id="ozk-Q8-3uN"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qtE-ZS-sjr">
                         <rect key="frame" x="0.0" y="0.0" width="395" height="101"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -225,6 +235,10 @@
         <scene sceneID="kUP-gh-mAE">
             <objects>
                 <viewController id="Blz-YU-9M9" customClass="OscillatorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qvr-qS-eo2"/>
+                        <viewControllerLayoutGuide type="bottom" id="c6r-hW-kyf"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Wly-2V-RUX">
                         <rect key="frame" x="0.0" y="0.0" width="395" height="100"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -255,6 +269,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tg6-PX-guo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1018.5" y="85"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fKr-cj-ggN">
+            <objects>
+                <viewController id="WxK-xs-7j9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uHw-bQ-TVT">
+                        <rect key="frame" x="0.0" y="0.0" width="395" height="103"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="hib-Ok-MdC">
+                                <rect key="frame" x="89" y="16" width="176" height="31"/>
+                                <connections>
+                                    <action selector="volumeChanged:" destination="aWm-7K-TG4" eventType="valueChanged" id="DBS-Mr-3w2"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cutoff:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eva-dg-Jmb">
+                                <rect key="frame" x="14" y="20" width="53" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-1" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="5MY-lX-Uwc" userLabel="Pan Slider">
+                                <rect key="frame" x="89" y="56" width="176" height="31"/>
+                                <connections>
+                                    <action selector="panChanged:" destination="aWm-7K-TG4" eventType="valueChanged" id="deB-9X-Txh"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Q:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6h9-wP-jUE">
+                                <rect key="frame" x="49" y="59" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qtd-eC-4DF" userLabel="Pan Value">
+                                <rect key="frame" x="283" y="61" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100%" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXi-kl-ZRk" userLabel="Volume Value">
+                                <rect key="frame" x="283" y="20" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xyj-ZH-cX5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1018.5" y="573"/>
         </scene>
     </scenes>
 </document>
